asgn1/src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    KWRD_TYPE
    LOWER_BOUND
    KWRD_LAZY
    VIEWABLE
    KWRD_THIS
    KWRD_WITH
    KWRD_FORSOME
    KWRD_TRY
    NIL
    KWRD_SUPER
    KWRD_UNTIL
    VIEW
    KWRD_PACKAGE
    EXACTEQ
    KWRD_ABST
    KWRD_FOREACH
    KWRD_STATIC
    UNDER
    UPPER_BOUND
    INNER_CLASS
    KWRD_THROW
    KWRD_MACRO
    KWRD_PUBLIC
    KWRD_FINAL
    COMM
    KWRD_IMPLICIT
    KWRD_SEALED
    CHOOSE
    KWRD_FINALLY
    SUBTYPE
    KWRD_FOR
    QUESTION
    KWRD_IMPORT
    KWRD_YIELD
    KWRD_OVERRIDE
    newline
    AT
    KWRD_TRAIT
    KWRD_CATCH

Grammar

Rule 0     S' -> ProgramStructure
Rule 1     ProgramStructure -> ProgramStructure class_and_objects
Rule 2     ProgramStructure -> class_and_objects
Rule 3     class_and_objects -> SingletonObject
Rule 4     class_and_objects -> class_declaration
Rule 5     SingletonObject -> ObjectDeclare block
Rule 6     ObjectDeclare -> KWRD_OBJECT IDENTIFIER
Rule 7     ObjectDeclare -> KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
Rule 8     expression -> assignment_expression
Rule 9     expression_optional -> expression
Rule 10    expression_optional -> empty
Rule 11    assignment_expression -> assignment
Rule 12    assignment_expression -> conditional_or_expression
Rule 13    assignment -> valid_variable assignment_operator assignment_expression
Rule 14    assignment_operator -> ASSIGN
Rule 15    assignment_operator -> TIMES_ASSIGN
Rule 16    assignment_operator -> DIVIDE_ASSIGN
Rule 17    assignment_operator -> REMAINDER_ASSIGN
Rule 18    assignment_operator -> PLUS_ASSIGN
Rule 19    assignment_operator -> MINUS_ASSIGN
Rule 20    assignment_operator -> LSHIFT_ASSIGN
Rule 21    assignment_operator -> RSHIFT_ASSIGN
Rule 22    assignment_operator -> AND_ASSIGN
Rule 23    assignment_operator -> OR_ASSIGN
Rule 24    assignment_operator -> XOR_ASSIGN
Rule 25    conditional_or_expression -> conditional_and_expression
Rule 26    conditional_or_expression -> conditional_or_expression OR conditional_and_expression
Rule 27    conditional_and_expression -> inclusive_or_expression
Rule 28    conditional_and_expression -> conditional_and_expression AND inclusive_or_expression
Rule 29    inclusive_or_expression -> exclusive_or_expression
Rule 30    inclusive_or_expression -> inclusive_or_expression OR_BITWISE exclusive_or_expression
Rule 31    exclusive_or_expression -> and_expression
Rule 32    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 33    and_expression -> equality_expression
Rule 34    and_expression -> and_expression AND_BITWISE equality_expression
Rule 35    equality_expression -> relational_expression
Rule 36    equality_expression -> equality_expression EQUAL relational_expression
Rule 37    equality_expression -> equality_expression NEQUAL relational_expression
Rule 38    relational_expression -> shift_expression
Rule 39    relational_expression -> relational_expression GREATER shift_expression
Rule 40    relational_expression -> relational_expression LESS shift_expression
Rule 41    relational_expression -> relational_expression GEQ shift_expression
Rule 42    relational_expression -> relational_expression LEQ shift_expression
Rule 43    shift_expression -> additive_expression
Rule 44    shift_expression -> shift_expression LSHIFT additive_expression
Rule 45    shift_expression -> shift_expression RSHIFT additive_expression
Rule 46    additive_expression -> multiplicative_expression
Rule 47    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 48    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 49    multiplicative_expression -> unary_expression
Rule 50    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 51    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 52    multiplicative_expression -> multiplicative_expression REMAINDER unary_expression
Rule 53    unary_expression -> PLUS unary_expression
Rule 54    unary_expression -> MINUS unary_expression
Rule 55    unary_expression -> unary_expression_not_plus_minus
Rule 56    unary_expression_not_plus_minus -> base_variable_set
Rule 57    unary_expression_not_plus_minus -> TILDA unary_expression
Rule 58    unary_expression_not_plus_minus -> NOT unary_expression
Rule 59    unary_expression_not_plus_minus -> cast_expression
Rule 60    base_variable_set -> variable_literal
Rule 61    base_variable_set -> LPAREN expression RPAREN
Rule 62    cast_expression -> LPAREN primitive_type RPAREN unary_expression
Rule 63    primary -> literal
Rule 64    primary -> method_invocation
Rule 65    literal -> int_float
Rule 66    literal -> CHARACTER
Rule 67    literal -> STRING_CONST
Rule 68    literal -> BOOL_CONSTT
Rule 69    literal -> BOOL_CONSTF
Rule 70    literal -> KWRD_NULL
Rule 71    int_float -> FLOAT_CONST
Rule 72    int_float -> INT_CONST
Rule 73    method_invocation -> name LPAREN argument_list_opt RPAREN
Rule 74    array_access -> name LBPAREN expression RBPAREN
Rule 75    argument_list_opt -> argument_list
Rule 76    argument_list_opt -> empty
Rule 77    argument_list -> expression
Rule 78    argument_list -> argument_list COMMA expression
Rule 79    name -> simple_name
Rule 80    name -> qualified_name
Rule 81    simple_name -> IDENTIFIER
Rule 82    qualified_name -> name DOT simple_name
Rule 83    valid_variable -> name
Rule 84    valid_variable -> array_access
Rule 85    variable_literal -> valid_variable
Rule 86    variable_literal -> primary
Rule 87    block -> BLOCK_BEGIN block_statements_opt BLOCK_END
Rule 88    block_statements_opt -> block_statements
Rule 89    block_statements_opt -> empty
Rule 90    block_statements -> block_statement
Rule 91    block_statements -> block_statements block_statement
Rule 92    block_statement -> local_variable_declaration_statement
Rule 93    block_statement -> statement
Rule 94    block_statement -> class_declaration
Rule 95    block_statement -> SingletonObject
Rule 96    block_statement -> method_declaration
Rule 97    modifier_opts -> modifier
Rule 98    modifier_opts -> empty
Rule 99    declaration_keyword -> KWRD_VAR
Rule 100   declaration_keyword -> KWRD_VAL
Rule 101   local_variable_declaration_statement -> local_variable_declaration STATE_END
Rule 102   local_variable_declaration -> modifier_opts declaration_keyword variable_declaration_body
Rule 103   variable_declaration_initializer -> expression
Rule 104   variable_declaration_initializer -> array_initializer
Rule 105   variable_declaration_initializer -> class_initializer
Rule 106   variable_arguement_list -> variable_declaration_initializer
Rule 107   variable_arguement_list -> variable_arguement_list COMMA variable_declaration_initializer
Rule 108   variable_declaration_body -> variable_declarator ASSIGN variable_declaration_initializer
Rule 109   variable_declaration_body -> LPAREN variable_declarators RPAREN ASSIGN LPAREN variable_arguement_list RPAREN
Rule 110   variable_declarators -> variable_declarator
Rule 111   variable_declarators -> variable_declarators COMMA variable_declarator
Rule 112   variable_declarator -> variable_declarator_id
Rule 113   variable_declarator_id -> IDENTIFIER COLON type
Rule 114   statement -> normal_statement
Rule 115   statement -> if_then_statement
Rule 116   statement -> if_then_else_statement
Rule 117   statement -> while_statement
Rule 118   statement -> do_while_statement
Rule 119   normal_statement -> block
Rule 120   normal_statement -> expression_statement
Rule 121   normal_statement -> empty_statement
Rule 122   normal_statement -> return_statement
Rule 123   normal_statement -> switch_statement
Rule 124   expression_statement -> statement_expression STATE_END
Rule 125   statement_expression -> assignment
Rule 126   statement_expression -> method_invocation
Rule 127   if_then_statement -> KWRD_IF LPAREN expression RPAREN statement
Rule 128   if_then_else_statement -> KWRD_IF LPAREN expression RPAREN if_then_else_intermediate KWRD_ELSE statement
Rule 129   if_then_else_statement_precedence -> KWRD_IF LPAREN expression RPAREN if_then_else_intermediate KWRD_ELSE if_then_else_intermediate
Rule 130   if_then_else_intermediate -> normal_statement
Rule 131   if_then_else_intermediate -> if_then_else_statement_precedence
Rule 132   while_statement -> KWRD_WHILE LPAREN expression RPAREN statement
Rule 133   do_while_statement -> KWRD_DO statement KWRD_WHILE LPAREN expression RPAREN STATE_END
Rule 134   switch_statement -> expression KWRD_MATCH switch_block
Rule 135   switch_block -> BLOCK_BEGIN BLOCK_END
Rule 136   switch_block -> BLOCK_BEGIN switch_block_statements BLOCK_END
Rule 137   switch_block -> BLOCK_BEGIN switch_labels BLOCK_END
Rule 138   switch_block -> BLOCK_BEGIN switch_block_statements switch_labels BLOCK_END
Rule 139   switch_block_statements -> switch_block_statement
Rule 140   switch_block_statements -> switch_block_statements switch_block_statement
Rule 141   switch_block_statement -> switch_labels block_statements
Rule 142   switch_labels -> switch_label
Rule 143   switch_labels -> switch_labels switch_label
Rule 144   switch_label -> KWRD_CASE expression FUNTYPE
Rule 145   empty_statement -> STATE_END
Rule 146   return_statement -> KWRD_RETURN expression_optional STATE_END
Rule 147   constructor_arguement_list_opt -> constructor_arguement_list
Rule 148   constructor_arguement_list_opt -> empty
Rule 149   constructor_arguement_list -> constructor_arguement_list_declarator
Rule 150   constructor_arguement_list -> constructor_arguement_list COMMA constructor_arguement_list_declarator
Rule 151   constructor_arguement_list_declarator -> declaration_keyword IDENTIFIER COLON type
Rule 152   func_arguement_list_opt -> variable_declarators
Rule 153   func_arguement_list_opt -> empty
Rule 154   class_declaration -> class_header class_body
Rule 155   class_header -> class_header_name class_header_extends_opt
Rule 156   class_header_name -> class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
Rule 157   class_header_name1 -> modifier_opts KWRD_CLASS name
Rule 158   class_header_extends_opt -> class_header_extends
Rule 159   class_header_extends_opt -> empty
Rule 160   class_header_extends -> KWRD_EXTNDS name LPAREN func_arguement_list_opt RPAREN
Rule 161   class_body -> block
Rule 162   method_declaration -> method_header method_body
Rule 163   method_header -> method_header_name LPAREN func_arguement_list_opt RPAREN COLON method_return_type ASSIGN
Rule 164   method_return_type -> type
Rule 165   method_return_type -> TYPE_VOID
Rule 166   method_header_name -> modifier_opts KWRD_DEF IDENTIFIER
Rule 167   method_body -> block
Rule 168   modifier -> KWRD_PROTECTED
Rule 169   modifier -> KWRD_PRIVATE
Rule 170   type -> primitive_type
Rule 171   type -> reference_type
Rule 172   primitive_type -> TYPE_INT
Rule 173   primitive_type -> TYPE_FLOAT
Rule 174   primitive_type -> TYPE_CHAR
Rule 175   primitive_type -> TYPE_STRING
Rule 176   primitive_type -> TYPE_BOOLEAN
Rule 177   reference_type -> class_data_type
Rule 178   reference_type -> array_data_type
Rule 179   class_data_type -> name
Rule 180   array_data_type -> KWRD_ARRAY LBPAREN type RBPAREN
Rule 181   array_initializer -> KWRD_NEW KWRD_ARRAY LBPAREN type RBPAREN LPAREN INT_CONST RPAREN
Rule 182   array_initializer -> KWRD_ARRAY LPAREN argument_list_opt RPAREN
Rule 183   class_initializer -> KWRD_NEW name LPAREN argument_list_opt RPAREN
Rule 184   empty -> <empty>

Terminals, with rules where they appear

AND                  : 28
AND_ASSIGN           : 22
AND_BITWISE          : 34
ASSIGN               : 14 108 109 163
AT                   : 
BLOCK_BEGIN          : 87 135 136 137 138
BLOCK_END            : 87 135 136 137 138
BOOL_CONSTF          : 69
BOOL_CONSTT          : 68
CHARACTER            : 66
CHOOSE               : 
COLON                : 113 151 163
COMM                 : 
COMMA                : 78 107 111 150
DIVIDE               : 51
DIVIDE_ASSIGN        : 16
DOT                  : 82
EQUAL                : 36
EXACTEQ              : 
FLOAT_CONST          : 71
FUNTYPE              : 144
GEQ                  : 41
GREATER              : 39
IDENTIFIER           : 6 7 7 81 113 151 166
INNER_CLASS          : 
INT_CONST            : 72 181
KWRD_ABST            : 
KWRD_ARRAY           : 180 181 182
KWRD_CASE            : 144
KWRD_CATCH           : 
KWRD_CLASS           : 157
KWRD_DEF             : 166
KWRD_DO              : 133
KWRD_ELSE            : 128 129
KWRD_EXTNDS          : 7 160
KWRD_FINAL           : 
KWRD_FINALLY         : 
KWRD_FOR             : 
KWRD_FOREACH         : 
KWRD_FORSOME         : 
KWRD_IF              : 127 128 129
KWRD_IMPLICIT        : 
KWRD_IMPORT          : 
KWRD_LAZY            : 
KWRD_MACRO           : 
KWRD_MATCH           : 134
KWRD_NEW             : 181 183
KWRD_NULL            : 70
KWRD_OBJECT          : 6 7
KWRD_OVERRIDE        : 
KWRD_PACKAGE         : 
KWRD_PRIVATE         : 169
KWRD_PROTECTED       : 168
KWRD_PUBLIC          : 
KWRD_RETURN          : 146
KWRD_SEALED          : 
KWRD_STATIC          : 
KWRD_SUPER           : 
KWRD_THIS            : 
KWRD_THROW           : 
KWRD_TRAIT           : 
KWRD_TRY             : 
KWRD_TYPE            : 
KWRD_UNTIL           : 
KWRD_VAL             : 100
KWRD_VAR             : 99
KWRD_WHILE           : 132 133
KWRD_WITH            : 
KWRD_YIELD           : 
LBPAREN              : 74 180 181
LEQ                  : 42
LESS                 : 40
LOWER_BOUND          : 
LPAREN               : 61 62 73 109 109 127 128 129 132 133 156 160 163 181 182 183
LSHIFT               : 44
LSHIFT_ASSIGN        : 20
MINUS                : 48 54
MINUS_ASSIGN         : 19
NEQUAL               : 37
NIL                  : 
NOT                  : 58
OR                   : 26
OR_ASSIGN            : 23
OR_BITWISE           : 30
PLUS                 : 47 53
PLUS_ASSIGN          : 18
QUESTION             : 
RBPAREN              : 74 180 181
REMAINDER            : 52
REMAINDER_ASSIGN     : 17
RPAREN               : 61 62 73 109 109 127 128 129 132 133 156 160 163 181 182 183
RSHIFT               : 45
RSHIFT_ASSIGN        : 21
STATE_END            : 101 124 133 145 146
STRING_CONST         : 67
SUBTYPE              : 
TILDA                : 57
TIMES                : 50
TIMES_ASSIGN         : 15
TYPE_BOOLEAN         : 176
TYPE_CHAR            : 174
TYPE_FLOAT           : 173
TYPE_INT             : 172
TYPE_STRING          : 175
TYPE_VOID            : 165
UNDER                : 
UPPER_BOUND          : 
VIEW                 : 
VIEWABLE             : 
XOR                  : 32
XOR_ASSIGN           : 24
error                : 
newline              : 

Nonterminals, with rules where they appear

ObjectDeclare        : 5
ProgramStructure     : 1 0
SingletonObject      : 3 95
additive_expression  : 43 44 45 47 48
and_expression       : 31 32 34
argument_list        : 75 78
argument_list_opt    : 73 182 183
array_access         : 84
array_data_type      : 178
array_initializer    : 104
assignment           : 11 125
assignment_expression : 8 13
assignment_operator  : 13
base_variable_set    : 56
block                : 5 119 161 167
block_statement      : 90 91
block_statements     : 88 91 141
block_statements_opt : 87
cast_expression      : 59
class_and_objects    : 1 2
class_body           : 154
class_data_type      : 177
class_declaration    : 4 94
class_header         : 154
class_header_extends : 158
class_header_extends_opt : 155
class_header_name    : 155
class_header_name1   : 156
class_initializer    : 105
conditional_and_expression : 25 26 28
conditional_or_expression : 12 26
constructor_arguement_list : 147 150
constructor_arguement_list_declarator : 149 150
constructor_arguement_list_opt : 156
declaration_keyword  : 102 151
do_while_statement   : 118
empty                : 10 76 89 98 148 153 159
empty_statement      : 121
equality_expression  : 33 34 36 37
exclusive_or_expression : 29 30 32
expression           : 9 61 74 77 78 103 127 128 129 132 133 134 144
expression_optional  : 146
expression_statement : 120
func_arguement_list_opt : 160 163
if_then_else_intermediate : 128 129 129
if_then_else_statement : 116
if_then_else_statement_precedence : 131
if_then_statement    : 115
inclusive_or_expression : 27 28 30
int_float            : 65
literal              : 63
local_variable_declaration : 101
local_variable_declaration_statement : 92
method_body          : 162
method_declaration   : 96
method_header        : 162
method_header_name   : 163
method_invocation    : 64 126
method_return_type   : 163
modifier             : 97
modifier_opts        : 102 157 166
multiplicative_expression : 46 47 48 50 51 52
name                 : 73 74 82 83 157 160 179 183
normal_statement     : 114 130
primary              : 86
primitive_type       : 62 170
qualified_name       : 80
reference_type       : 171
relational_expression : 35 36 37 39 40 41 42
return_statement     : 122
shift_expression     : 38 39 40 41 42 44 45
simple_name          : 79 82
statement            : 93 127 128 132 133
statement_expression : 124
switch_block         : 134
switch_block_statement : 139 140
switch_block_statements : 136 138 140
switch_label         : 142 143
switch_labels        : 137 138 141 143
switch_statement     : 123
type                 : 113 151 164 180 181
unary_expression     : 49 50 51 52 53 54 57 58 62
unary_expression_not_plus_minus : 55
valid_variable       : 13 85
variable_arguement_list : 107 109
variable_declaration_body : 102
variable_declaration_initializer : 106 107 108
variable_declarator  : 108 110 111
variable_declarator_id : 112
variable_declarators : 109 111 152
variable_literal     : 60
while_statement      : 117

Parsing method: LALR

state 0

    (0) S' -> . ProgramStructure
    (1) ProgramStructure -> . ProgramStructure class_and_objects
    (2) ProgramStructure -> . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (154) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
    (155) class_header -> . class_header_name class_header_extends_opt
    (156) class_header_name -> . class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
    (157) class_header_name1 -> . modifier_opts KWRD_CLASS name
    (97) modifier_opts -> . modifier
    (98) modifier_opts -> . empty
    (168) modifier -> . KWRD_PROTECTED
    (169) modifier -> . KWRD_PRIVATE
    (184) empty -> .

    KWRD_OBJECT     shift and go to state 4
    KWRD_PROTECTED  shift and go to state 10
    KWRD_PRIVATE    shift and go to state 14
    KWRD_CLASS      reduce using rule 184 (empty -> .)

    class_header_name              shift and go to state 3
    ProgramStructure               shift and go to state 6
    ObjectDeclare                  shift and go to state 1
    class_header_name1             shift and go to state 2
    class_declaration              shift and go to state 11
    class_and_objects              shift and go to state 12
    empty                          shift and go to state 5
    SingletonObject                shift and go to state 7
    modifier                       shift and go to state 13
    class_header                   shift and go to state 8
    modifier_opts                  shift and go to state 9

state 1

    (5) SingletonObject -> ObjectDeclare . block
    (87) block -> . BLOCK_BEGIN block_statements_opt BLOCK_END

    BLOCK_BEGIN     shift and go to state 15

    block                          shift and go to state 16

state 2

    (156) class_header_name -> class_header_name1 . LPAREN constructor_arguement_list_opt RPAREN

    LPAREN          shift and go to state 17


state 3

    (155) class_header -> class_header_name . class_header_extends_opt
    (158) class_header_extends_opt -> . class_header_extends
    (159) class_header_extends_opt -> . empty
    (160) class_header_extends -> . KWRD_EXTNDS name LPAREN func_arguement_list_opt RPAREN
    (184) empty -> .

    KWRD_EXTNDS     shift and go to state 20
    BLOCK_BEGIN     reduce using rule 184 (empty -> .)

    class_header_extends           shift and go to state 18
    class_header_extends_opt       shift and go to state 19
    empty                          shift and go to state 21

state 4

    (6) ObjectDeclare -> KWRD_OBJECT . IDENTIFIER
    (7) ObjectDeclare -> KWRD_OBJECT . IDENTIFIER KWRD_EXTNDS IDENTIFIER

    IDENTIFIER      shift and go to state 22


state 5

    (98) modifier_opts -> empty .

    KWRD_DEF        reduce using rule 98 (modifier_opts -> empty .)
    KWRD_CLASS      reduce using rule 98 (modifier_opts -> empty .)
    KWRD_VAR        reduce using rule 98 (modifier_opts -> empty .)
    KWRD_VAL        reduce using rule 98 (modifier_opts -> empty .)


state 6

    (0) S' -> ProgramStructure .
    (1) ProgramStructure -> ProgramStructure . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (154) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
    (155) class_header -> . class_header_name class_header_extends_opt
    (156) class_header_name -> . class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
    (157) class_header_name1 -> . modifier_opts KWRD_CLASS name
    (97) modifier_opts -> . modifier
    (98) modifier_opts -> . empty
    (168) modifier -> . KWRD_PROTECTED
    (169) modifier -> . KWRD_PRIVATE
    (184) empty -> .

    KWRD_OBJECT     shift and go to state 4
    KWRD_PROTECTED  shift and go to state 10
    KWRD_PRIVATE    shift and go to state 14
    KWRD_CLASS      reduce using rule 184 (empty -> .)

    class_header_name              shift and go to state 3
    ObjectDeclare                  shift and go to state 1
    class_header_name1             shift and go to state 2
    class_declaration              shift and go to state 11
    class_and_objects              shift and go to state 23
    empty                          shift and go to state 5
    SingletonObject                shift and go to state 7
    modifier                       shift and go to state 13
    class_header                   shift and go to state 8
    modifier_opts                  shift and go to state 9

state 7

    (3) class_and_objects -> SingletonObject .

    KWRD_OBJECT     reduce using rule 3 (class_and_objects -> SingletonObject .)
    KWRD_PROTECTED  reduce using rule 3 (class_and_objects -> SingletonObject .)
    KWRD_PRIVATE    reduce using rule 3 (class_and_objects -> SingletonObject .)
    $end            reduce using rule 3 (class_and_objects -> SingletonObject .)
    KWRD_CLASS      reduce using rule 3 (class_and_objects -> SingletonObject .)


state 8

    (154) class_declaration -> class_header . class_body
    (161) class_body -> . block
    (87) block -> . BLOCK_BEGIN block_statements_opt BLOCK_END

    BLOCK_BEGIN     shift and go to state 15

    class_body                     shift and go to state 24
    block                          shift and go to state 25

state 9

    (157) class_header_name1 -> modifier_opts . KWRD_CLASS name

    KWRD_CLASS      shift and go to state 26


state 10

    (168) modifier -> KWRD_PROTECTED .

    KWRD_DEF        reduce using rule 168 (modifier -> KWRD_PROTECTED .)
    KWRD_CLASS      reduce using rule 168 (modifier -> KWRD_PROTECTED .)
    KWRD_VAR        reduce using rule 168 (modifier -> KWRD_PROTECTED .)
    KWRD_VAL        reduce using rule 168 (modifier -> KWRD_PROTECTED .)


state 11

    (4) class_and_objects -> class_declaration .

    KWRD_OBJECT     reduce using rule 4 (class_and_objects -> class_declaration .)
    KWRD_PROTECTED  reduce using rule 4 (class_and_objects -> class_declaration .)
    KWRD_PRIVATE    reduce using rule 4 (class_and_objects -> class_declaration .)
    $end            reduce using rule 4 (class_and_objects -> class_declaration .)
    KWRD_CLASS      reduce using rule 4 (class_and_objects -> class_declaration .)


state 12

    (2) ProgramStructure -> class_and_objects .

    KWRD_OBJECT     reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KWRD_PROTECTED  reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KWRD_PRIVATE    reduce using rule 2 (ProgramStructure -> class_and_objects .)
    $end            reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KWRD_CLASS      reduce using rule 2 (ProgramStructure -> class_and_objects .)


state 13

    (97) modifier_opts -> modifier .

    KWRD_DEF        reduce using rule 97 (modifier_opts -> modifier .)
    KWRD_CLASS      reduce using rule 97 (modifier_opts -> modifier .)
    KWRD_VAR        reduce using rule 97 (modifier_opts -> modifier .)
    KWRD_VAL        reduce using rule 97 (modifier_opts -> modifier .)


state 14

    (169) modifier -> KWRD_PRIVATE .

    KWRD_DEF        reduce using rule 169 (modifier -> KWRD_PRIVATE .)
    KWRD_CLASS      reduce using rule 169 (modifier -> KWRD_PRIVATE .)
    KWRD_VAR        reduce using rule 169 (modifier -> KWRD_PRIVATE .)
    KWRD_VAL        reduce using rule 169 (modifier -> KWRD_PRIVATE .)


state 15

    (87) block -> BLOCK_BEGIN . block_statements_opt BLOCK_END
    (88) block_statements_opt -> . block_statements
    (89) block_statements_opt -> . empty
    (90) block_statements -> . block_statement
    (91) block_statements -> . block_statements block_statement
    (184) empty -> .
    (92) block_statement -> . local_variable_declaration_statement
    (93) block_statement -> . statement
    (94) block_statement -> . class_declaration
    (95) block_statement -> . SingletonObject
    (96) block_statement -> . method_declaration
    (101) local_variable_declaration_statement -> . local_variable_declaration STATE_END
    (114) statement -> . normal_statement
    (115) statement -> . if_then_statement
    (116) statement -> . if_then_else_statement
    (117) statement -> . while_statement
    (118) statement -> . do_while_statement
    (154) class_declaration -> . class_header class_body
    (5) SingletonObject -> . ObjectDeclare block
    (162) method_declaration -> . method_header method_body
    (102) local_variable_declaration -> . modifier_opts declaration_keyword variable_declaration_body
    (119) normal_statement -> . block
    (120) normal_statement -> . expression_statement
    (121) normal_statement -> . empty_statement
    (122) normal_statement -> . return_statement
    (123) normal_statement -> . switch_statement
    (127) if_then_statement -> . KWRD_IF LPAREN expression RPAREN statement
    (128) if_then_else_statement -> . KWRD_IF LPAREN expression RPAREN if_then_else_intermediate KWRD_ELSE statement
    (132) while_statement -> . KWRD_WHILE LPAREN expression RPAREN statement
    (133) do_while_statement -> . KWRD_DO statement KWRD_WHILE LPAREN expression RPAREN STATE_END
    (155) class_header -> . class_header_name class_header_extends_opt
    (6) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
    (163) method_header -> . method_header_name LPAREN func_arguement_list_opt RPAREN COLON method_return_type ASSIGN
    (97) modifier_opts -> . modifier
    (98) modifier_opts -> . empty
    (87) block -> . BLOCK_BEGIN block_statements_opt BLOCK_END
    (124) expression_statement -> . statement_expression STATE_END
    (145) empty_statement -> . STATE_END
    (146) return_statement -> . KWRD_RETURN expression_optional STATE_END
    (134) switch_statement -> . expression KWRD_MATCH switch_block
    (156) class_header_name -> . class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
    (166) method_header_name -> . modifier_opts KWRD_DEF IDENTIFIER
    (168) modifier -> . KWRD_PROTECTED
    (169) modifier -> . KWRD_PRIVATE
    (125) statement_expression -> . assignment
    (126) statement_expression -> . method_invocation
    (8) expression -> . assignment_expression
    (157) class_header_name1 -> . modifier_opts KWRD_CLASS name
    (13) assignment -> . valid_variable assignment_operator assignment_expression
    (73) method_invocation -> . name LPAREN argument_list_opt RPAREN
    (11) assignment_expression -> . assignment
    (12) assignment_expression -> . conditional_or_expression
    (83) valid_variable -> . name
    (84) valid_variable -> . array_access
    (79) name -> . simple_name
    (80) name -> . qualified_name
    (25) conditional_or_expression -> . conditional_and_expression
    (26) conditional_or_expression -> . conditional_or_expression OR conditional_and_expression
    (74) array_access -> . name LBPAREN expression RBPAREN
    (81) simple_name -> . IDENTIFIER
    (82) qualified_name -> . name DOT simple_name
    (27) conditional_and_expression -> . inclusive_or_expression
    (28) conditional_and_expression -> . conditional_and_expression AND inclusive_or_expression
    (29) inclusive_or_expression -> . exclusive_or_expression
    (30) inclusive_or_expression -> . inclusive_or_expression OR_BITWISE exclusive_or_expression
    (31) exclusive_or_expression -> . and_expression
    (32) exclusive_or_expression -> . exclusive_or_expression XOR and_expression
    (33) and_expression -> . equality_expression
    (34) and_expression -> . and_expression AND_BITWISE equality_expression
    (35) equality_expression -> . relational_expression
    (36) equality_expression -> . equality_expression EQUAL relational_expression
    (37) equality_expression -> . equality_expression NEQUAL relational_expression
    (38) relational_expression -> . shift_expression
    (39) relational_expression -> . relational_expression GREATER shift_expression
    (40) relational_expression -> . relational_expression LESS shift_expression
    (41) relational_expression -> . relational_expression GEQ shift_expression
    (42) relational_expression -> . relational_expression LEQ shift_expression
    (43) shift_expression -> . additive_expression
    (44) shift_expression -> . shift_expression LSHIFT additive_expression
    (45) shift_expression -> . shift_expression RSHIFT additive_expression
    (46) additive_expression -> . multiplicative_expression
    (47) additive_expression -> . additive_expression PLUS multiplicative_expression
    (48) additive_expression -> . additive_expression MINUS multiplicative_expression
    (49) multiplicative_expression -> . unary_expression
    (50) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (51) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (52) multiplicative_expression -> . multiplicative_expression REMAINDER unary_expression
    (53) unary_expression -> . PLUS unary_expression
    (54) unary_expression -> . MINUS unary_expression
    (55) unary_expression -> . unary_expression_not_plus_minus
    (56) unary_expression_not_plus_minus -> . base_variable_set
    (57) unary_expression_not_plus_minus -> . TILDA unary_expression
    (58) unary_expression_not_plus_minus -> . NOT unary_expression
    (59) unary_expression_not_plus_minus -> . cast_expression
    (60) base_variable_set -> . variable_literal
    (61) base_variable_set -> . LPAREN expression RPAREN
    (62) cast_expression -> . LPAREN primitive_type RPAREN unary_expression
    (85) variable_literal -> . valid_variable
    (86) variable_literal -> . primary
    (63) primary -> . literal
    (64) primary -> . method_invocation
    (65) literal -> . int_float
    (66) literal -> . CHARACTER
    (67) literal -> . STRING_CONST
    (68) literal -> . BOOL_CONSTT
    (69) literal -> . BOOL_CONSTF
    (70) literal -> . KWRD_NULL
    (71) int_float -> . FLOAT_CONST
    (72) int_float -> . INT_CONST

    BLOCK_END       reduce using rule 184 (empty -> .)
    KWRD_DEF        reduce using rule 184 (empty -> .)
    KWRD_CLASS      reduce using rule 184 (empty -> .)
    KWRD_VAR        reduce using rule 184 (empty -> .)
    KWRD_VAL        reduce using rule 184 (empty -> .)
    KWRD_IF         shift and go to state 57
    KWRD_WHILE      shift and go to state 46
    KWRD_DO         shift and go to state 41
    KWRD_OBJECT     shift and go to state 4
    BLOCK_BEGIN     shift and go to state 15
    STATE_END       shift and go to state 47
    KWRD_RETURN     shift and go to state 44
    KWRD_PROTECTED  shift and go to state 10
    KWRD_PRIVATE    shift and go to state 14
    IDENTIFIER      shift and go to state 76
    PLUS            shift and go to state 37
    MINUS           shift and go to state 30
    TILDA           shift and go to state 72
    NOT             shift and go to state 60
    LPAREN          shift and go to state 93
    CHARACTER       shift and go to state 85
    STRING_CONST    shift and go to state 31
    BOOL_CONSTT     shift and go to state 36
    BOOL_CONSTF     shift and go to state 32
    KWRD_NULL       shift and go to state 90
    FLOAT_CONST     shift and go to state 28
    INT_CONST       shift and go to state 69
